Try to get this repo to work with github pages.

--- a/findhorse/index.html
+++ b/findhorse/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Where's Daisy?</title>
-        <script type="text/javascript" src="/libs/pixi.min.js"></script>
-        <script type="text/javascript" src="/libs/greensock/TweenLite.min.js"></script>
-        <script type="text/javascript" src="/libs/greensock/TimelineLite.min.js"></script>
-        <script type="text/javascript" src="/engine/keyboard.js"></script>
-        <script type="text/javascript" src="/engine/input.js"></script>
-        <script type="text/javascript" src="/engine/core.js"></script>
-        <script type="text/javascript" src="/engine/actions.js"></script>
+        <script type="text/javascript" src="/ablett/libs/pixi.min.js"></script>
+        <script type="text/javascript" src="/ablett/libs/greensock/TweenLite.min.js"></script>
+        <script type="text/javascript" src="/ablett/libs/greensock/TimelineLite.min.js"></script>
+        <script type="text/javascript" src="/ablett/engine/keyboard.js"></script>
+        <script type="text/javascript" src="/ablett/engine/input.js"></script>
+        <script type="text/javascript" src="/ablett/engine/core.js"></script>
+        <script type="text/javascript" src="/ablett/engine/actions.js"></script>
 
         <script type="text/javascript" src="findhorse.js"></script>
     </head>
